data/derived/sp14/progs/unify/prog1487.ml.out
Characters 85-86:
  [[0];[0]]::a
             ^
Error: This expression has type 'a list * 'b
       but an expression was expected of type int list list list
